--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 Django==3.0.8
 django-clear-cache==0.3
 django-cors-headers==3.4.0
+django-debug-toolbar==2.2
 django-filter==2.3.0
 django-markdown-deux==1.0.5
 django-markdown2==0.3.1
