--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==2.3.0
 django-markdown-deux==1.0.5
 django-markdown2==0.3.1
 djangorestframework==3.11.0
+pip install gunicorn==20.0.4
 idna==2.10
 markdown2==2.3.9
 python-memcached==1.59
