--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.0.8
 django-clear-cache==0.3
 django-cors-headers==3.4.0
 django-debug-toolbar==2.2
 django-filter==2.3.0
+django-heroku==0.3.1
 django-markdown-deux==1.0.5
 django-markdown2==0.3.1
 djangorestframework==3.11.0
-pip install gunicorn==20.0.4
+gunicorn==20.0.4
 idna==2.10
 markdown2==2.3.9
+psycopg2==2.8.5
 python-memcached==1.59
 pytz==2020.1
 requests==2.24.0
