--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ language: python
 python:
   - "3.8"
 
-install: pip install pipenv
+install: pip install -r requirements.txt
 
-script: pipenv run python manage.py test
-
-notifications:
-  email: true
+script:  python manage.py test
