--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.10
+beautifulsoup4==4.9.1
 certifi==2020.6.20
 chardet==3.0.4
 dj-database-url==0.5.0
@@ -8,18 +9,23 @@ django-cors-headers==3.4.0
 django-debug-toolbar==2.2
 django-filter==2.3.0
 django-heroku==0.3.1
+django-htmlmin==0.11.0
 django-markdown-deux==1.0.5
 django-markdown2==0.3.1
 djangorestframework==3.11.0
 gunicorn==20.0.4
+html5lib==1.1
 idna==2.10
 markdown2==2.3.9
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
 python-memcached==1.59
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
+soupsieve==2.0.1
 sqlparse==0.3.1
 stripe==2.48.0
 urllib3==1.25.9
+webencodings==0.5.1
 whitenoise==5.1.0
