--- a/Pipfile
+++ b/Pipfile
@@ -14,14 +14,14 @@ django-clear-cache = "==0.3"
 django-cors-headers = "==3.4.0"
 django-debug-toolbar = "==2.2"
 django-filter = "==2.3.0"
-django-heroku = "==0.3.1"
+# django-heroku = "==0.3.1"
 django-markdown-deux = "==1.0.5"
 django-markdown2 = "==0.3.1"
 djangorestframework = "==3.11.0"
 gunicorn = "==20.0.4"
 idna = "==2.10"
 markdown2 = "==2.3.9"
-psycopg2 = "==2.8.5"
+# psycopg2 = "==2.8.5"
 python-memcached = "==1.59"
 pytz = "==2020.1"
 requests = "==2.24.0"
@@ -31,7 +31,11 @@ stripe = "==2.48.0"
 urllib3 = "==1.25.9"
 whitenoise = "==5.1.0"
 Django = "==3.0.8"
-django-htmlmin = "*"
+django-htmlmin = "==0.11.0"
+beautifulsoup4 = "==4.9.1"
+html5lib = "==1.1"
+soupsieve = "==2.0.1"
+webencodings = "==0.5.1"
 
 [requires]
 python_version = "3.8"
