--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-clear-cache==0.3
 django-cors-headers==3.4.0
 django-debug-toolbar==2.2
 django-filter==2.3.0
-django-heroku==0.3.1
+# django-heroku==0.3.1
 django-htmlmin==0.11.0
 django-markdown-deux==1.0.5
 django-markdown2==0.3.1
@@ -17,8 +17,8 @@ gunicorn==20.0.4
 html5lib==1.1
 idna==2.10
 markdown2==2.3.9
-psycopg2==2.8.5
-psycopg2-binary==2.8.5
+# psycopg2==2.8.5
+# psycopg2-binary==2.8.5
 python-memcached==1.59
 pytz==2020.1
 requests==2.24.0
