--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,32 @@
-asgiref==3.2.10
-beautifulsoup4==4.9.1
-certifi==2020.6.20
-chardet==3.0.4
-dj-database-url==0.5.0
-Django==3.0.8
+asgiref==3.9.1
+beautifulsoup4==4.13.4
+certifi==2025.7.14
+chardet==5.2.0
+dj-database-url==3.0.1
+Django==5.2.4
 django-clear-cache==0.3
-django-cors-headers==3.4.0
-django-debug-toolbar==2.2
-django-filter==2.3.0
+django-cors-headers==4.7.0
+django-debug-toolbar==5.2.0
+django-filter==25.1
 # django-heroku==0.3.1
 django-htmlmin==0.11.0
-django-markdown-deux==1.0.5
+django-markdown-deux==1.0.6
 django-markdown2==0.3.1
-djangorestframework==3.11.0
-gunicorn==20.0.4
+djangorestframework==3.16.0
+gunicorn==23.0.0
 html5lib==1.1
-idna==2.10
-markdown2==2.3.9
+idna==3.10
+markdown2==2.5.3
 # psycopg2==2.8.5
 # psycopg2-binary==2.8.5
-python-memcached==1.59
-pytz==2020.1
-requests==2.24.0
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.3.1
-stripe==2.48.0
-urllib3==1.25.9
+# python-memcached==1.62
+pymemcache==4.0.0
+pytz==2025.2
+requests==2.32.4
+six==1.17.0
+soupsieve==2.7
+sqlparse==0.5.3
+stripe==12.3.0
+urllib3==2.5.0
 webencodings==0.5.1
-whitenoise==5.1.0
+whitenoise==6.9.0
